# C-primer-plus-learning

./: CMakeLists.txt
src/: CMakeLists.txt
src/chapter1-3/: CMakeLists.txt  altnames.c  badcount.c  bases.c  charcode.c  escape.c  fathm_ft.c  main.c  platinum.c  print1.c  print2.c  showf_pt.c  toobig.c  two_func.c  typesize.c
src/chapter10/: CMakeLists.txt  arf.c  array2d.c  bounds.c  day_mon1.c  day_mon2.c  day_mon3.c  designate.c  flc.c  no_data.c  order.c  pnt_add.c  ptr_ops.c  rain.c  somedata.c  sum_arr1.c  sum_arr2.c  vararr2d.c  zippo1.c  zippo2.c
src/chapter11/: CMakeLists.txt  addresses.c  arrchar.c  compare.c  compback.c  copy1.c  copy2.c  copy3.c  fgets1.c  fgets2.c  fgets3.c  format.c  getputs.c  hello.c  join_chk.c  mod_str.c  nogo.c  nono.c  p_and_s.c  put1.c  put2.c  put_out.c  put_put.c  quit_chk.c  repeat.c  scan_str.c  sort_str.c  starsrch.c  str_cat.c  strcnvt.c  strings1.c  strptr.c  test_fit.c
src/chapter12/: CMakeLists.txt  diceroll.c  diceroll.h  dyn_arr.c  forc99.c  global.c  hiding.c  loc_stat.c  manydice.c  parta.c  partb.c  r_dirve1.c  r_driver0.c  rand0.c  s_and_r.c  where.c
src/chapter13/: CMakeLists.txt  addaword.c  append.c  count.c  randbin.c  (+2 more)
src/chapter16/: CMakeLists.txt  assert.c  byebye.c  doubinc1.c  generic.c  glue.c  ifdef.c  mac_arg.c  mems.c  mytype.c  names.h  names_st.c  names_st.h  predef.c  preproc.c  qsorter.c  rect_pol.c  statasrt.c  subst.c  useheader.c  varargs.c  variadic.c
src/chapter6/: CMakeLists.txt  boolean.c  cmpflt.c  do_while.c  entry.c  for_13s.c  for_char.c  for_cube.c  for_down.c  for_geo.c  for_none.c  for_show.c  for_wild.c  postage.c  power.c  rows1.c  rows2.c  scores_in.c  summing.c  sweetie1.c  sweetie2.c  t_and_f.c  trouble.c  truth.c  when.c  while1.c  while2.c  zeno.c
(+109 files in other folders)
